(PC-36175)[PRO] fix: Tag DS Component font + alignement in status cell

--- a/pro/src/styles/components/Cells.module.scss
+++ b/pro/src/styles/components/Cells.module.scss
@@ -176,6 +176,10 @@
 
   .status-column {
     display: table-cell;
+
+    &-content {
+      margin-top: rem.torem(8px);
+    }
   }
 
   .actions-column {
